<resources>
    <string name="app_name">MJwel</string>
    <string name="videos">Videos</string>
    <string name="chats">Chats</string>
    <string name="news_and_updates">News and Updates</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_requirements">My Requirements</string>
    <string name="my_leads">My Leads</string>
    <string name="my_enquiry">My Enquiry</string>
    <string name="account_setting">Account Setting</string>
    <string name="faqs">FAQs</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="contact_us_91_8888888888">Contact Us: +91–8888888888</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile Image</string>
    <string name="followers">Followers:</string>
    <string name="followings">Followings:</string>
    <string name="shubham_kumar">Shubham Kumar</string>
    <string name="dra_my_wallet">My Wallet: ₹</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="best_seller">Best seller</string>
    <string name="more">More</string>
    <string name="product_image">product image</string>
    <string name="name_of_jewellery">Name of Jewellery</string>
    <string name="product_name">Product Name</string>
    <string name="_3_0">3.0 Ratings</string>
    <string name="add">ADD</string>
    <string name="sample_text">lorem ispum Lroena asjdbao asjdakdba aoibdaiobda ooadsboasidas oabdoasbdoa abdoadonasbda oadbaodasdaod oabdpadpabdao</string>
    <string name="enjoy_shopping">Enjoy Shopping</string>
    <string name="tagline_splash">Explore a ton of products and\nfind a suitable one</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="products_will_appear_on_the_basis_of_country">Products will appear on the basis of country</string>
    <string name="country_flag">Country Flag</string>
    <string name="tick_button">tick_button</string>
    <string name="select">Select</string>
    <string name="auth_logo">auth_logo</string>
    <string name="send_otp">Send OTP</string>
    <string name="auth_reg">Registration</string>
    <string name="enter_your_mobile_number_we_will_send_you_otp_to_verify">Enter your mobile number, we will send you OTP to verify</string>
    <string name="_91">(+91)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="login">Login</string>
    <string name="skip_authentication">Skip Authentication</string>
    <string name="forgot_password_send_otp">Forgot Password??? SEND OTP</string>
    <string name="password">Password</string>
    <string name="new_registration">New Registration</string>
    <string name="skip_this_step">Skip this step</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="we_have_sent_the_otp_on_91_xxxxxxxxxx">We have sent the OTP on +91 XXXXXXXXXX</string>
    <string name="x">X</string>
    <string name="verify">Verify</string>
    <string name="asdas_home">Home</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="best_offer">Best Offer</string>
    <string name="best_of_offers">Best of Offers</string>
    <string name="exchange_old_gold">Exchange Old Gold</string>
    <string name="terms_and_conditions_applied">Terms and Conditions applied</string>
    <string name="valid_till_25th_jan">Valid till 25th Jan</string>
    <string name="give_a_special_gift_to_your_loved_one_on_special_price">Give a special gift to your loved one on special price</string>
    <string name="on_white_gold_necklace">On White gold necklace</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_cart_title">My Cart</string>
    <string name="bank_offer_5_instant_discount_with_hsbc_cashback_card">Bank Offer : 5% Instant discount with HSBC Cashback Card.</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="proceed_to_buy">Proceed to Buy</string>
    <string name="discount">Discount</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_mrp_including_of_all_taxes">Total MRP (Including of all taxes)</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="final_amount">Final Amount</string>
    <string name="my_account">My Account</string>
    <string name="business_information">Business Information:</string>
    <string name="i_accept_the_terms_of_the_uses_and_privacy_policy">I accept the terms of the uses and privacy policy</string>
    <string name="profile_save">Save</string>
    <string name="exporter">Exporter</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="dob_dd_mm_yyyy">DOB (DD/MM/YYYY)</string>
    <string name="email_address">Email Address</string>
    <string name="seller_name">Seller Name</string>
    <string name="personal_information">Personal Information:</string>
    <string name="landmark">Landmark</string>
    <string name="search_address">Search Address</string>
    <string name="alternative_contact_number_91">Alternative Contact Number (+91)</string>
    <string name="website_url">Website Url</string>
    <string name="company_til_no">Company TIL No.</string>
    <string name="gst_no">GST No.</string>
    <string name="kyc_information">KYC Information:</string>
    <string name="brand_name">Brand Name</string>
    <string name="name">Name</string>
    <string name="news">News</string>
    <string name="jewellery_updates">Jewellery Updates</string>
    <string name="in_the_international_markets_gold_shed_over_1_per_cent_after_vaulting_above_the_1_600_level_for_the_first_time_in_nearly_seven_years_on_wednesday">In the international markets, gold shed over 1 per cent after vaulting above the $1,600 level for the first time in nearly seven years on Wednesday.</string>
    <string name="bullion_counters_slipped_on_wednesday_after_tensions_in_west_asia_eased_following_reassuring_comments_from_us_president_donald_trump_this_helped_investors_to_seek_riskier_assets_trump_said_the_us_did_not_necessarily_have_to_respond_militarily_to_the_iranian_attacks_on_military_bases_housing_us_troops_in_iraq_overnight_he_said_no_americans_were">Bullion counters slipped on Wednesday after tensions in West Asia eased following reassuring comments from US President Donald Trump. This helped investors to seek riskier assets. Trump said the US did not necessarily have to respond militarily to the Iranian attacks on military bases housing US troops in Iraq overnight. He said no Americans were</string>
    <string name="mjwel_is_india_s_leading_zero_fee_online_b2b_b2c_o2o_jewellery_market_place_bringing_together_manufacture_whole_seller_retailers_and_supporting_them_to_sell_their_product_globally">MJWEL is India\'s Leading ZERO FEE online B2B, B2C, O2O jewellery market place, bringing together Manufacture, Whole seller, Retailers and supporting them to sell their product globally.</string>
    <string-array name="country_array">
        <item>India</item>
        <item>China</item>
        <item>Japan</item>
        <item>Korea</item>
        <item>United Kingdom</item>
        <item>United State</item>
    </string-array>
    <string-array name="country_code_array">
        <item>(+91)</item>
        <item>(+92)</item>
        <item>(+93)</item>
        <item>(+94)</item>
        <item>(+95)</item>
        <item>(+96)</item>
    </string-array>
    <string-array name="state_array">
        <item>Delhi</item>
        <item>Uttar Pradesh</item>
        <item>Uttrakhand</item>
        <item>Madhya Pradesh</item>
        <item>Haryana</item>
        <item>Rajasthan</item>
    </string-array>
    <string-array name="business_type_array">
        <item>Business Type</item>
    </string-array>
</resources>
