<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/bottom_home"
        android:title="@string/asdas_home"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_best_offer"
        android:icon="@drawable/bottom_best_offer"
        android:title="@string/best_offer"
        android:orderInCategory="101"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_wishlist"
        android:icon="@drawable/bottom_wishlist"
        android:title="@string/wishlist"
        android:orderInCategory="102"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/bottom_cart"
        android:title="@string/cart"
        android:orderInCategory="103"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_account_setting"
        android:icon="@drawable/bottom_profile"
        android:title="@string/account"
        android:orderInCategory="104"
        app:showAsAction="always"/>

</menu>