<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_background_gradient"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensansbold"
                android:paddingStart="@dimen/pad_large_v1"
                android:paddingLeft="@dimen/pad_large_v1"
                android:text="@string/my_account"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/profile_image"
                android:contentDescription="@string/profile_image"
                android:padding="1dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_image" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensanssemibold"
                android:gravity="center_horizontal"
                android:padding="@dimen/pad_v_small_v2"
                android:text=""
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/profile_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensanssemibold"
                android:gravity="center_horizontal"
                android:padding="@dimen/pad_vv_small_v2"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/gap_v_small_v2"
            android:paddingStart="@dimen/pad_large_v1"
            android:paddingLeft="@dimen/pad_large_v1"
            android:paddingEnd="@dimen/pad_large_v1"
            android:paddingRight="@dimen/pad_large_v1"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/profile_business_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/opensanssemibold"
                android:text="@string/business_information"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/profile_business_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <EditText
                    android:id="@+id/profile_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/name"
                    android:drawableEnd="@drawable/bottom_profile"
                    android:drawableRight="@drawable/bottom_profile"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_edit_brand_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/brand_name"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/profile_edit_business_type"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:entries="@array/business_type_array"
                    android:fontFamily="@font/opensansregular"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/profile_kyc_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/opensanssemibold"
                android:text="@string/kyc_information"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/profile_kyc_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <EditText
                    android:id="@+id/profile_gst_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/gst_no"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_company_til"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/company_til_no"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_website_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/website_url"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_alternative_contact_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/alternative_contact_number_91"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_search_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/search_address"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/landmark"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/profile_personal_information_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/opensanssemibold"
                android:text="@string/personal_information"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/profile_personal_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <EditText
                    android:id="@+id/profile_seller_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/seller_name"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_edit_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_edit_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="date"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/dob_dd_mm_yyyy"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/state"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/profile_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/opensansregular"
                    android:hint="@string/pincode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/profile_exporter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/opensanssemibold"
                    android:text="@string/exporter"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/profile_i_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/opensanssemibold"
                    android:text="@string/i_accept_the_terms_of_the_uses_and_privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/profile_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_gradient"
            android:text="@string/profile_save"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>